--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-web": "^0.21.0",
     "expo-print": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-sharing": "~14.0.8",
